# narwhals

./: .git-blame-ignore-revs  .gitignore  .mypy.ini  .pre-commit-config.yaml  .python-version  404.html  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  _typos.toml  backcompat.html  demo.py  design.md  dev.ipynb  docstring_template.mustache  ecosystem.html  extending.html  f.py  generating_sql.html  how_it_works.html  index.html  installation.html  mkdocs.yml  noxfile.py  objects.inv  overhead.html  plot.ipynb  pyproject.toml  pytest.ini  renovate.json  requirements-dev.txt  requirements-docs.txt  resources.html  run.sh  security.html  t.py  this.html  todo.md  why.html  (+1 more)
.github/: CODE_OF_CONDUCT.md  dependabot.yml  pull_request_template.md  release-drafter.yml
_benchmarks/: duckdb_diagonal_concat.py  duckdb_diagonal_concat_evaluate.py
api-completeness/: dataframe.html  expr.html  expr_cat.html  expr_dt.html  expr_list.html  expr_name.html  expr_str.html  expr_struct.html  index.html  lazyframe.html  series.html  series_cat.html  series_dt.html  series_list.html  series_str.html  series_struct.html
api-reference/: dataframe.html  dependencies.html  dtypes.html  exceptions.html  expr.html  expr_cat.html  expr_dt.html  expr_list.html  expr_name.html  expr_str.html  expr_struct.html  group_by.html  index.html  (+14 more)
narwhals-testing/: pyproject.toml
narwhals-testing/narwhals_testing/: __init__.py  _plugin.py
narwhals-testing/narwhals_testing/tests/: conftest.py  enum_test.py  expression_parsing_test.py  from_dict_test.py  from_dicts_test.py  from_numpy_test.py  from_pycapsule_test.py  ibis_test.py  joblib_test.py  namespace_test.py  new_series_test.py  pickle_test.py  read_scan_test.py  repr_test.py  selectors_test.py  serde_test.py  sql_test.py  stable_v1_dependencies_test.py  tpch_q1_test.py  typing_compat_test.py  utils_test.py  v1_test.py  v2_test.py
narwhals-testing/narwhals_testing/tests/data/: customer.csv  lineitem.csv  nation.csv  orders.csv  part.csv  partsupp.csv  supplier.csv
narwhals-testing/narwhals_testing/tests/dependencies/: is_into_dataframe_test.py  is_narwhals_lazyframe_test.py  is_numpy_scalar_test.py  is_pandas_index_test.py
narwhals-testing/narwhals_testing/tests/dtypes/: dtypes_test.py
narwhals-testing/narwhals_testing/tests/expr_and_series/: abs_test.py  all_horizontal_test.py  any_all_test.py  any_horizontal_test.py  any_value_test.py  arithmetic_test.py  binary_test.py  cast_test.py  clip_test.py  coalesce_test.py  concat_str_test.py  cos_test.py  count_test.py  cum_count_test.py  cum_max_test.py  cum_min_test.py  cum_prod_test.py  cum_sum_test.py  diff_test.py  division_by_zero_test.py  double_selected_test.py  double_test.py  drop_nulls_test.py  ewm_test.py  exclude_test.py  exp_test.py  fill_nan_test.py  fill_null_test.py  filter_test.py  first_last_test.py  floor_ceil_test.py  format_test.py  horizontal_broadcasts_test.py  is_between_test.py  is_close_test.py  is_duplicated_test.py  is_finite_test.py  is_first_distinct_test.py  is_in_test.py  is_last_distinct_test.py  (+44 more)
narwhals-testing/narwhals_testing/tests/expr_and_series/cat/: get_categories_test.py
narwhals-testing/narwhals_testing/tests/expr_and_series/dt/: convert_time_zone_test.py  datetime_attributes_test.py  datetime_duration_test.py  offset_by_test.py  ordinal_day_test.py  replace_time_zone_test.py  timestamp_test.py  to_string_test.py  total_minutes_test.py  truncate_test.py
narwhals-testing/narwhals_testing/tests/expr_and_series/list/: contains_test.py  get_test.py  len_test.py  max_test.py  mean_test.py  median_test.py  min_test.py  sort_test.py  sum_test.py  unique_test.py
narwhals-testing/narwhals_testing/tests/expr_and_series/name/: keep_test.py  map_test.py  prefix_test.py  suffix_test.py  to_lowercase_test.py  to_uppercase_test.py
narwhals-testing/narwhals_testing/tests/expr_and_series/str/: contains_test.py  head_test.py  len_chars_test.py  pad_test.py  replace_test.py  slice_test.py  split_test.py  starts_with_ends_with_test.py  strip_chars_test.py  tail_test.py  to_date_test.py  to_datetime_test.py  to_titlecase_test.py  to_uppercase_to_lowercase_test.py  zfill_test.py
narwhals-testing/narwhals_testing/tests/expr_and_series/struct_/: field_test.py
narwhals-testing/narwhals_testing/tests/frame/: add_test.py  array_dunder_test.py  arrow_c_stream_test.py  clone_test.py  collect_test.py  columns_test.py  concat_test.py  double_test.py  drop_nulls_test.py  drop_test.py  estimated_size_test.py  explode_test.py  filter_test.py  from_arrow_test.py  from_dict_test.py  from_dicts_test.py  from_numpy_test.py  get_column_test.py  getitem_test.py  group_by_test.py  head_test.py  interchange_native_namespace_test.py  interchange_schema_test.py  interchange_to_pandas_test.py  invalid_test.py  is_duplicated_test.py  is_unique_test.py  item_test.py  join_test.py  lazy_test.py  null_count_test.py  pipe_test.py  pivot_test.py  reindex_test.py  rename_test.py  rows_test.py  sample_test.py  schema_test.py  select_test.py  sink_parquet_test.py  (+14 more)
narwhals-testing/narwhals_testing/tests/hypothesis/: getitem_test.py  join_test.py
narwhals-testing/narwhals_testing/tests/modern_polars/: ewm_mean_test.py  filter_test.py  method_chaining_2_test.py  method_chaining_test.py  performance_test.py  pivot_test.py  unpivot_test.py
narwhals-testing/narwhals_testing/tests/series_only/: __iter___test.py  alias_rename_test.py  arg_max_test.py  arg_min_test.py  arg_true_test.py  array_dunder_test.py  arrow_c_stream_test.py  cast_test.py  from_iterable_test.py  from_numpy_test.py  gather_every_test.py  getitem_test.py  head_test.py  hist_test.py  is_ordered_categorical_test.py  is_sorted_test.py  item_test.py  scatter_test.py  sort_test.py  tail_test.py  to_dummy_test.py  to_frame_test.py  to_list_test.py  to_native_test.py  to_numpy_test.py  to_pandas_test.py  value_counts_test.py  zip_with_test.py
narwhals-testing/narwhals_testing/tests/testing/: assert_frame_equal_test.py  assert_series_equal_test.py  conftest.py
narwhals-testing/narwhals_testing/tests/translate/: from_native_test.py
(+4779 files in other folders)
